# editor

./: CMakeLists.txt  app.lua
install/: CMakeLists.txt
install/macosx/InstallLubyk.app/Contents/Resources/Scripts/: main.scpt
install/macosx/Lubyk.app/Contents/MacOS/: Lubyk
lib/_control/lk/: Button.lua  Label.lua  Message.lua  Pad.lua  Select.lua  Slider.lua  Switch.lua
lib/editor/: Application.lua  Connector.lua  Control.lua  ControlTabs.lua  ControlView.lua  CtrlSlotView.lua  Inlet.lua  Library.lua  LibraryView.lua  Link.lua  LinkEditor.lua  LinkView.lua  LogView.lua  MachineList.lua  MachineView.lua  Morph.lua  MorphTab.lua  Node.lua  NodeLineEdit.lua  NodeView.lua  Outlet.lua  ParamSlotView.lua  PatchView.lua  Process.lua  ProcessTab.lua  ProcessView.lua  Settings.lua  SlotView.lua  SplashScreen.lua  StemTab.lua  Zone.lua  ZoneChooser.lua  ZoneView.lua
test/: Connector_test.lua  Control_test.lua  LibraryView_test.lua  Library_test.lua  LinkView_test.lua  LogView_test.lua  MachineList_test.lua  MainView_test.lua  NodeLineEdit_test.lua  ZoneView_test.lua  editor_test.lua  lk_Slider_test.lua
test/fixtures/_prototypes/foo/: Bar.lua  Baz.lua
