# --------------------------------------------------------------
#  editor
#
#  provides:
#    editor.lua
#    editor/Application.lua, etc
# --------------------------------------------------------------
set(MODULE_NAME editor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  
