# --------------------------------------------------------------
#  editor
#
#  provides:
#    editor.lua
#    editor/Application.lua, etc
# --------------------------------------------------------------
set(MODULE_NAME editor)

# --------------------------------------------------------------
#  editor app
# --------------------------------------------------------------
add_subdirectory(install)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)
